fix block spacing for better theme compatibility (#258)

--- a/client/blocks/poll/edit.scss
+++ b/client/blocks/poll/edit.scss
@@ -33,6 +33,7 @@
 
 		&.wp-block-button__link {
 			cursor: text;
+			display: block;
 
 			&:hover {
 				opacity: inherit;
@@ -44,6 +45,11 @@
 .crowdsignal-forms-poll__resize-wrapper {
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 3em;
+
+	&:not(:first-child) {
+		margin-top: 3em;
+	}
 }
 
 
